Fix Features page

--- a/features/index.html
+++ b/features/index.html
@@ -1,4 +1,4 @@
-http://matplotlib.org/basemap/---
+---
 layout: default
 title: Features
 ---
@@ -38,7 +38,7 @@ vector and raster formats: SVG, PNG, PDF, EPS and PostScript.
 <h3>Multiple projections</h3>
 <p>
 ccplot uses
-<a href="http://matplotlib.sourceforge.net/basemap/">basemap</a>
+<a href="http://matplotlib.org/basemap/">basemap</a>
 map projection library. Several projections are supported, including
 mercator, transverse mercator, south (north) pole stereographic.
 </p>
