Fix typo in Known issues

--- a/download/index.html
+++ b/download/index.html
@@ -217,8 +217,8 @@ to the Debian bug reporting system.
 <h3>16 June 2013</h3>
 <p>
     <strong>ccplot &lt;= 1.4.6</strong> There was a serious bug in the
-    visualization of CALIPSO profiles, when the altitude of data points was
-    shifted by one element, resulting in a difference of as much as 300m
+    visualization of CALIPSO profiles, whereby the altitude of data points
+    were shifted by one element, resulting in a difference of as much as 300m
     relative to their true location. The difference in the highest-resolution
     regions was 60m.
 </p>
