Rename Version History to Release Notes

--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Version History
+title: Release Notes
 ---
-<h1>Version History</h1>
+<h1>Release Notes</h1>
 <h2>New in 1.5-rc5 (2013-06-27)</h2>
 <ul>
     <li>Added support for arbitrary dataset plotting.</li>
