--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,12 +3,13 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
-<h2>New in 1.5-rc5 (2013-06-27)</h2>
+<h2>New in 1.5-rc6 (2013-11-18)</h2>
 <ul>
     <li>Added support for arbitrary dataset plotting.</li>
     <li>Added ccplot API functions.</li>
     <li>Removed dependency on PyNIO. ccplot now uses its own HDF reading
         module interfacing with libhdf4 and libhdfeos.</li>
+    <li>Support for Windows.</li>
     <li>CALIPSO lidar altitudes are now read from the product file
         instead of being hard-coded in ccplot.</li>
     <li>Automatic unit testing performed by Travis CI.</li>
