--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@ css: home.css
 ---
 <div class="download">
     <p class="latest">Latest:</p>
-    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.4.7.tar.gz">ccplot-1.4.7.tar.gz</a></p>
-    <p class="requirements">Linux &amp; Mac OS X</p>
-    <p class="latest">Beta:</p>
-    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc5.tar.gz">ccplot-1.5-rc5.tar.gz</a></p>
+    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc6.tar.gz">ccplot-1.5-rc6.tar.gz</a></p>
+    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc6.win32-py2.7.exe">ccplot-1.5-rc6.win32-py2.7.exe</a></p>
+    <p class="requirements">Linux &amp; Mac OS X &amp; Windows</p>
 </div>
 
 <p class="abstract">
