Change wording of Windows install instructions

--- a/download/index.html
+++ b/download/index.html
@@ -100,10 +100,10 @@ document.getElementById('hidearchived').onclick = function() {
 <p>
     The recommended way of installing ccplot on Windows is to use the
     <a href="https://code.google.com/p/pythonxy/">python(x,y)</a>
-    distribution. In addition to standard modules, select the
-    <strong>cython</strong> module during installation, and install <strong>basemap</strong> from the
+    distribution. In addition to standard modules, select
+    <strong>cython</strong> during installation, and install <strong>basemap</strong> from the
     <a href="https://code.google.com/p/pythonxy/wiki/AdditionalPlugins">Additional plugins</a>
-    page. Finally, install ccplot from the executable you downloaded.
+    page. Finally, install ccplot using the supplied installer.
 </p>
 <p>
     You should be able to run ccplot from the Command Prompt, e.g.:
