Change wording of installation instructions

--- a/download/index.html
+++ b/download/index.html
@@ -113,7 +113,7 @@ document.getElementById('hidearchived').onclick = function() {
 </div>
 
 <h2>Linux / Unix</h2>
-It is recommended to install ccplot on Linux. Make sure you have the
+ccplot works best on Linux. Make sure you have the
 following programs and libraries installed:
 
 <ul>
@@ -153,17 +153,16 @@ following programs and libraries installed:
 <p><strong>ccplot &lt; 1.5</strong></p>
 <p>
     PyNIO can be downloaded upon free registration
-    on <a href="http://www.earthsystemgrid.org/home.htm">ESG</a>.
+    from <a href="http://www.earthsystemgrid.org/home.htm">ESG</a>.
     However, to make your life easier, you can also download 
     <a href="pynio/">PyNIO precompiled binaries
-    </a> without registration from our website (recommended).
+    </a> without registration from this website (recommended).
     If you need to build PyNIO from source, follow the
     <a href="http://www.pyngl.ucar.edu/Download/build_pynio_from_src.shtml">
     instructions</a> on the PyNIO website.
 </p>
 <p>
-    To install PyNIO from a binary distribution,
-    on Ubuntu and Debian with Python:
+    To install PyNIO from a binary distribution on Ubuntu/Debian, do:
 </p>
 <div class="code">
     # Substitute the right name of the binary archive and Python version.<br>
