--- a/download/index.html
+++ b/download/index.html
@@ -199,7 +199,7 @@ Please continue with ccplot manual (Chapter 6) in
 and
 <a href="http://ccplot.org/pub/doc/pdf/ccplot.1.pdf">ccplot man page</a>.
 
-<h2>Known issues</h2>
+<h2>Known Issues</h2>
 <h3>4 June 2013</h3>
 <p>
 There is a bug with python-dap which causes a warning to be printed:
