--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
-<h2>New in 1.5-rc6 (2013-11-18)</h2>
+<h2>New in 1.5-rc7 (2013-11-20)</h2>
 <ul>
     <li>Added support for arbitrary dataset plotting.</li>
     <li>Added ccplot API functions.</li>
@@ -15,6 +15,7 @@ title: Release Notes
     <li>Automatic unit testing performed by Travis CI.</li>
     <li>ccplot now looks for colormaps in a directory relative to
         the executable. This fixes installation in non-standard paths.</li>
+    <li>New man page in ronn.</li>
 </ul>
 <h2>New in 1.4.7 (2013-06-16):</h2>
 <ul>
