Update Windows installation instructions

--- a/download/index.html
+++ b/download/index.html
@@ -109,7 +109,7 @@ document.getElementById('hidearchived').onclick = function() {
     You should be able to run ccplot from the Command Prompt, e.g.:
 </p>
 <div class="code">
-    python C:\Python27\Scripts\ccplot -V
+    ccplot -V
 </div>
 
 <h2>Linux / Unix</h2>
