--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ css: home.css
 ---
 <div class="download">
     <p class="latest">Latest:</p>
-    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc7.tar.gz">ccplot-1.5-rc7.tar.gz</a></p>
+    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc8.tar.gz">ccplot-1.5-rc8.tar.gz</a></p>
     <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5-rc7.win32-py2.7.exe">ccplot-1.5-rc7.win32-py2.7.exe</a></p>
-    <p class="requirements">Unix-like OS &amp; Windows</p>
+    <p class="requirements">Linux, Mac OS X &amp; Windows</p>
 </div>
 
 <p class="abstract">
