--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,14 +3,15 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
-<h2>New in 1.5-rc7 (2013-11-20)</h2>
+<h2>New in 1.5 (2015-03-21)</h2>
 <ul>
-    <li>Added support for arbitrary dataset plotting.</li>
-    <li>Added ccplot API functions.</li>
+    <li>Added support for arbitrary dataset plotting (experimental).</li>
+    <li>Added ccplot API functions (experimental).</li>
     <li>Removed dependency on PyNIO. ccplot now uses its own HDF reading
         module interfacing with libhdf4 and libhdfeos.</li>
     <li>Support for Windows.</li>
-    <li>CALIPSO lidar altitudes are now read from the product file
+    <li>Support for Mac OS X.</li>
+    <li>CALIPSO LIDAR altitudes are now read from the product file
         instead of being hard-coded in ccplot.</li>
     <li>Automatic unit testing performed by Travis CI.</li>
     <li>ccplot now looks for colormaps in a directory relative to
