--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 1.5.1 (2015-09-01)</h2>
+<ul>
+    <li>Switched to interp2d_12 interpolation.</li>
+    <li>Fixed compilation on new Ubuntu/Debian releases.</li>
+</ul>
 <h2>New in 1.5 (2015-03-21)</h2>
 <ul>
     <li>Added support for arbitrary dataset plotting (experimental).</li>
