--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,13 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 1.5.2 (2015-10-18)</h2>
+<ul>
+    <li>Fix inverted layer products.</li>
+    <li>Fix type casting error arising in recent versions of numpy.</li>
+    <li>Fix MODIS swath dimension mapping (values on the 180th meridian are misplaced).</li>
+    <li>Fix matplotlib image interpolation.</li>
+</ul>
 <h2>New in 1.5.1 (2015-09-01)</h2>
 <ul>
     <li>Switched to interp2d_12 interpolation.</li>
