--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ css: home.css
     <p class="latest">Latest:</p>
     <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5.2.tar.gz">ccplot-1.5.2.tar.gz</a></p>
     <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5.2.win32-py2.7.exe">ccplot-1.5.2.win32-py2.7.exe</a></p>
-    <p class="requirements">Linux, Mac OS X &amp; Windows</p>
+    <p class="requirements">Linux, macOS &amp; Windows</p>
 </div>
 
 <p class="abstract">
