--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 1.5.4 (2020-08-02)</h2>
+<ul>
+    <li>Support for Python 3.</li>
+    <li>Support for new versions of matplotlib.</li>
+</ul>
 <h2>New in 1.5.2 (2015-10-18)</h2>
 <ul>
     <li>Fix inverted layer products.</li>
@@ -33,7 +38,7 @@ title: Release Notes
 <h2>New in 1.4.7 (2013-06-16):</h2>
 <ul>
     <li>Fixed a serious bug in CALIPSO profile visualization. Height of CALIPSO
-      profile data points could be shifted by as much as 300m in the vertical 
+      profile data points could be shifted by as much as 300m in the vertical
       relative to their correct location. This is because data and height
       arrays were shifted by one element.</li>
 </ul>
