Update CALIPSO data download link

--- a/data/index.html
+++ b/data/index.html
@@ -10,7 +10,7 @@ title: Data Sources
         upon registration. Registration and ordering is free.
     </li>
     <li><strong>CALIPSO.</strong> CALIPSO products can be ordered
-        via <a href="http://reverb.echo.nasa.gov">Reverb ECHO</a>.
+        via <a href="https://earthdata.nasa.gov">NASA Earthdata</a>.
         Registration and ordering is free.
     </li>
     <li><strong>MODIS.</strong> MODIS products are available through
@@ -29,7 +29,7 @@ title: Data Sources
     Quicklook Images section on CloudSat DPC</a>.
     </li>
     <li><strong>CALIPSO.</strong>
-    Products can be browsed on the 
+    Products can be browsed on the
     <a href="http://www-calipso.larc.nasa.gov/products/lidar/browse_images/production/">CALIPSO
     project website at NASA LARC</a>.
     </li>
