--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,13 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 1.5.5 (2021-03-16)</h2>
+<ul>
+    <li>Fixed deprecation warnings in recent versions of numpy and matplotlib.</li>
+    <li>Fixed colormaps arising in recent versions of matplotlib.</li>
+    <li>Fixed bytes vs. str handling in Python 3.</li>
+    <li>Support for Python 3 in tests.</li>
+</ul>
 <h2>New in 1.5.4 (2020-08-02)</h2>
 <ul>
     <li>Support for Python 3.</li>
