--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 1.5.6 (2021-03-26)</h2>
+<ul>
+    <li>Fixed an integer division issue in argument parsing on Python 3.</li>
+</ul>
 <h2>New in 1.5.5 (2021-03-16)</h2>
 <ul>
     <li>Fixed deprecation warnings in recent versions of numpy and matplotlib.</li>
