--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ css: home.css
 ---
 <div class="download">
     <p class="latest">Latest:</p>
-    <p><a href="http://sourceforge.net/projects/ccplot/files/ccplot/ccplot-1.5.5.tar.gz">ccplot-1.5.5.tar.gz</a></p>
+    <p><a href="https://github.com/peterkuma/ccplot/archive/refs/tags/v1.5.6.tar.gz">ccplot-1.5.6.tar.gz</a></p>
     <p class="requirements">Linux, macOS &amp; Windows</p>
 </div>
 
