Fix features blocks on mobile

--- a/features/index.html
+++ b/features/index.html
@@ -4,37 +4,46 @@ title: Features
 ---
 <h1>Features</h1>
 
-<div class="col1">
+<div class="wrapped-blocks">
+<div>
 <h3>Support for several CloudSat CPR, CALIPSO CALIOP,
 and Aqua MODIS data sets</h3>
 <p>
 ccplot can plot profile, layer, and MODIS earth view data sets.
 See <a href="#supported-products">table below</a>.
 </p>
+</div>
+<div>
 <h3>Extent selection</h3>
 <p>
 Extent to be plotted can
 be selected vertically by height, and horizontally by
 rays, time, geographical coordinates, or scanlines and samples (MODIS).
 </p>
+</div>
+<div>
 <h3>Custom colormaps</h3>
 <p>
 Custom colormaps can
 be constructed if you don't like any of those bundled with ccplot.
 </p>
+</div>
+<div>
 <h3>Aspect ratio</h3>
 <p>
 Aspect ratio of profile and layer
 plots can be set. This means your CloudSat and CALIPSO plots
 will have a uniform look, and thereby be easily comparable.
 </p>
+</div>
+<div>
 <h3>Multiple output formats</h3>
 <p>
 ccplot supports these
 vector and raster formats: SVG, PNG, PDF, EPS and PostScript.
 </p>
 </div>
-<div class="col2">
+<div>
 <h3>Multiple projections</h3>
 <p>
 ccplot uses
@@ -42,17 +51,23 @@ ccplot uses
 map projection library. Several projections are supported, including
 mercator, transverse mercator, south (north) pole stereographic.
 </p>
+</div>
+<div>
 <h3>Interpolation radius</h3>
 <p>
 ccplot uses nearest-neighbor
 interpolation for resampling of data onto a regular grid. Interpolation
 radius can be set on the command-line.
 </p>
+</div>
+<div>
 <h3>Surface elevation</h3>
 <p>
 A surface elevation line
 can be plotted on CALIPSO profile products.
 </p>
+</div>
+<div>
 <h3>Comprehensive documentation</h3>
 <p>
 ccplot comes with a <a href="../pub/doc/pdf/ccplot.1.pdf">manual page</a>
@@ -62,8 +77,7 @@ containing an overview of the A-Train constallation, products,
 scientific basis, data processing, and a ccplot tutorial.
 </p>
 </div>
-
-<div style="clear: both"></div>
+</div>
 
 <h2>Supported Products</h2>
 <p>List of supported instruments and data structures is given in the table
