Update links on Features page

--- a/features/index.html
+++ b/features/index.html
@@ -70,9 +70,9 @@ can be plotted on CALIPSO profile products.
 <div>
 <h3>Comprehensive documentation</h3>
 <p>
-ccplot comes with a <a href="../pub/doc/pdf/ccplot.1.pdf">manual page</a>
+ccplot comes with a <a href="../doc/ccplot.1.html">manual page</a>
 as well as the thesis
-<a href="../pub/doc/pdf/Visualising_Data_from_CloudSat_and_CALIPSO_Satellites.pdf">Visualising Data from CloudSat and CALIPSO Satellites</a>,
+<a href="https://zenodo.org/record/3764234">Visualising Data from CloudSat and CALIPSO Satellites</a>,
 containing an overview of the A-Train constallation, products,
 scientific basis, data processing, and a ccplot tutorial.
 </p>
