Repl link MODIS Rapid Response System -> Worldview

--- a/data/index.html
+++ b/data/index.html
@@ -34,6 +34,6 @@ title: Data Sources
     project website at NASA LARC</a>.
     </li>
     <li><strong>MODIS.</strong> You can use the
-    <a href="http://rapidfire.sci.gsfc.nasa.gov/realtime/">MODIS Rapid Response System</a>
+    <a href="https://worldview.earthdata.nasa.gov">NASA Worldview</a>
     to browse MODIS imagery.
 </ul>
