Add missing UTM zone projection option

--- a/man/ccplot.1.html
+++ b/man/ccplot.1.html
@@ -207,6 +207,10 @@ list of <var>key</var><code>=</code><var>value</var> pairs:</p>
 <code>sweep</code>=<var>axis</var>
 </dt>
 <dd>Sweep axis: "x" or "y" (geostationary projection).</dd>
+<dt>
+<code>zone</code>=<var>zone</var>
+</dt>
+<dd>UTM zone (1 to 60).</dd>
 </dl>
 
     <p><var>longitude</var> is in the format <var>number</var><code>E</code>|<code>W</code> (East or West).
