Update mapres option to support cartopy

--- a/man/ccplot.1.html
+++ b/man/ccplot.1.html
@@ -354,7 +354,8 @@ Some options accept a list of values seperated by colon in the format
 <dt><code>majorparallelslw</code></dt>
 <dd>Major parallels line width. Default: <em>0.3</em>.</dd>
 <dt><code>mapres</code></dt>
-<dd>Map resolution: c (crude), l (low), i (intermediate), h (high), f (full). Default: <em>i</em>.</dd>
+<dd>Map resolution: auto (automatic), 10m (1:10m) 50m (1:50m),
+110m (1:110m). Default: <em>auto</em>.</dd>
 <dt><code>meridiansbase</code></dt>
 <dd> Meridians base, or 0 for automatic. Default: <em>0</em>.</dd>
 <dt><code>minormeridianscolor</code></dt>
