--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Release Notes
 ---
 <h1>Release Notes</h1>
+<h2>New in 2.0.0 (2021-11-25)</h2>
+<ul>
+    <li>Migrated map plotting library from Basemap to Cartopy.</li>
+    <li>Non-backward compatible changes to projections and projection options.</li>
+</ul>
 <h2>New in 1.5.6 (2021-03-26)</h2>
 <ul>
     <li>Fixed an integer division issue in argument parsing on Python 3.</li>
