--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@ layout: default
 title: CloudSat and CALIPSO plotting tool
 css: home.css
 ---
-<div class="download">
-    <p class="latest">Latest:</p>
-    <p><a href="https://github.com/peterkuma/ccplot/archive/refs/tags/v1.5.6.tar.gz">ccplot-1.5.6.tar.gz</a></p>
-    <p class="requirements">Linux, macOS &amp; Windows</p>
-</div>
 
 <p class="abstract">
     ccplot is an open source command-line program for
@@ -48,7 +43,7 @@ css: home.css
     <a href="https://sourceforge.net/projects/ccplot/files/products/2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf">2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf</a>
 </div>
 <div class="code">
-    ccplot -o orbit-modis_x31+calipso_spstere.png -m x31 -c modis-temperature.cmap -p spstere:boundinglat=60S orbit-clipped
+    ccplot -o orbit-modis_x31+calipso_spstere.png -m x31 -c modis-temperature.cmap -p spstere orbit
     <a href="https://sourceforge.net/projects/ccplot/files/products/MYD021KM.A2007163.0415.005.2009290181256.hdf">MYD021KM.A2007163.0415.005.2009290181256.hdf</a>
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
