Fix broken link to CloudSat quicklooks

--- a/data/index.html
+++ b/data/index.html
@@ -25,7 +25,7 @@ title: Data Sources
 <ul>
     <li><strong>CloudSat.</strong>
     CloudSat products can be browsed on the web through the
-    <a href="http://www.cloudsat.cira.colostate.edu/dpcstatusQL.php">
+    <a href="https://www.cloudsat.cira.colostate.edu/quicklooks">
     Quicklook Images section on CloudSat DPC</a>.
     </li>
     <li><strong>CALIPSO.</strong>
