Change all headers from capitalized to normal case

--- a/data/index.html
+++ b/data/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Data Sources
+title: Data sources
 ---
-<h1>Data Sources</h1>
-<h2>Data Ordering</h2>
+<h1>Data sources</h1>
+<h2>Data ordering</h2>
 <ul>
     <li><strong>CloudSat.</strong> CloudSat products can be ordered
         from the <a href="http://www.cloudsat.cira.colostate.edu/">CloudSat DPC</a>
@@ -19,7 +19,7 @@ title: Data Sources
     </li>
 </ul>
 
-<h2>Data Browsing</h2>
+<h2>Data browsing</h2>
 <p>Data previews can be browsed on the web at the following locations.</p>
 
 <ul>
