--- a/download/releasenotes/index.html
+++ b/download/releasenotes/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Release Notes
+title: Release notes
 ---
-<h1>Release Notes</h1>
+<h1>Release notes</h1>
 <h2>New in 2.0.0 (2021-11-25)</h2>
 <ul>
     <li>Migrated map plotting library from Basemap to Cartopy.</li>
