--- a/features/index.html
+++ b/features/index.html
@@ -79,7 +79,7 @@ scientific basis, data processing, and a ccplot tutorial.
 </div>
 </div>
 
-<h2>Supported Products</h2>
+<h2>Supported products</h2>
 <p>List of supported instruments and data structures is given in the table
 below.</p>
 
