Home: Fix size of orbit images

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ css: home.css
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
 <a href="img/orbit-modis_x31+cloudsat.png">
-    <img src="img/orbit-modis_x31+cloudsat-small.png" />
+    <img src="img/orbit-modis_x31+cloudsat-small.png" height="370" />
 </a>
 <a href="img/orbit-modis_x31+calipso_spstere.png">
-    <img src="img/orbit-modis_x31+calipso_spstere-small.png" />
+    <img src="img/orbit-modis_x31+calipso_spstere-small.png" height="370" />
 </a>
 
 <p class="intro"><a href="features/">And more…</a>
