Home: High resolution preview images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ css: home.css
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
 <a href="img/calipso532.png">
-    <img src="img/calipso532-small.png" />
+    <img src="img/calipso532-small.png" width="850" />
 </a>
 
 <h2>CloudSat profile plots</h2>
@@ -31,7 +31,7 @@ css: home.css
     <a href="https://sourceforge.net/projects/ccplot/files/products/2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf">2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf</a>
 </div>
 <a href="img/cloudsat-reflec.png">
-    <img src="img/cloudsat-reflec-small.png" />
+    <img src="img/cloudsat-reflec-small.png" width="850" />
 </a>
 
 <h2>CloudSat and CALIPSO trajectories on top of MODIS swath</h2>
