Data sources: Add link to ICARE

--- a/data/index.html
+++ b/data/index.html
@@ -12,6 +12,7 @@ title: Data sources
     <li><strong>CALIPSO.</strong> CALIPSO products can be ordered
         via <a href="https://earthdata.nasa.gov">NASA Earthdata</a>.
         Registration and ordering is free.
+		They can also be downloaded from <a href="https://www.icare.univ-lille.fr">ICARE</a>.
     </li>
     <li><strong>MODIS.</strong> MODIS products are available through
         the <a href="http://ladsweb.nascom.nasa.gov/">LAADS Web</a>, even
