Data sources: Update links

--- a/data/index.html
+++ b/data/index.html
@@ -6,7 +6,7 @@ title: Data sources
 <h2>Data ordering</h2>
 <ul>
     <li><strong>CloudSat.</strong> CloudSat products can be ordered
-        from the <a href="http://www.cloudsat.cira.colostate.edu/">CloudSat DPC</a>
+        from the <a href="https://www.cloudsat.cira.colostate.edu">CloudSat DPC</a>
         upon registration. Registration and ordering is free.
     </li>
     <li><strong>CALIPSO.</strong> CALIPSO products can be ordered
@@ -15,7 +15,7 @@ title: Data sources
 		They can also be downloaded from <a href="https://www.icare.univ-lille.fr">ICARE</a>.
     </li>
     <li><strong>MODIS.</strong> MODIS products are available through
-        the <a href="http://ladsweb.nascom.nasa.gov/">LAADS Web</a>, even
+        the <a href="https://ladsweb.modaps.eosdis.nasa.gov/">LAADS Web</a>, even
         without registration.
     </li>
 </ul>
@@ -31,8 +31,9 @@ title: Data sources
     </li>
     <li><strong>CALIPSO.</strong>
     Products can be browsed on the
-    <a href="http://www-calipso.larc.nasa.gov/products/lidar/browse_images/production/">CALIPSO
-    project website at NASA LARC</a>.
+    <a href="https://www-calipso.larc.nasa.gov/products/lidar/browse_images/production/">CALIPSO
+    project website at NASA LARC</a> and
+    <a href="https://www.icare.univ-lille.fr/data-access/browse-images/calipso3/">ICARE</a>.
     </li>
     <li><strong>MODIS.</strong> You can use the
     <a href="https://worldview.earthdata.nasa.gov">NASA Worldview</a>
