--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.0 (2021-11-28)</h2>
+<ul>
+    <li>Added support for text encoding in the API.</li>
+</ul>
 <h2>New in 2.0.0 (2021-11-25)</h2>
 <ul>
     <li>Migrated map plotting library from Basemap to Cartopy.</li>
