--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.1 (2022-01-23)</h2>
+<ul>
+    <li>Fixed building of Python wheel on Windows (missing DLLs).</li>
+</ul>
 <h2>New in 2.1.0 (2021-11-28)</h2>
 <ul>
     <li>Added support for text encoding in the API.</li>
