Link to browse.ccplot.org (experimental)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ css: home.css
     and Aqua MODIS products.
 </p>
 
+<p style="background: #f5f5f5; padding: 0.5em; margin-top: -1em; float: right; text-align: center">
+You might also find interesting:<br /><a href="https://browse.ccplot.org">browse.ccplot.org</a> (experimental).
+</p>
+
 <h1>Features</h1>
 <h2>CALIPSO profile and layer plots</h2>
 <p>
