Improve style on mobile

--- a/features/index.html
+++ b/features/index.html
@@ -83,7 +83,7 @@ scientific basis, data processing, and a ccplot tutorial.
 <p>List of supported instruments and data structures is given in the table
 below.</p>
 
-<div class="table" id="supported-products">
+<div class="table" id="supported-products" style="white-space: nowrap">
     <table>
         <thead>
             <tr>
@@ -104,7 +104,7 @@ below.</p>
 	        <tr><td>Attenuated Color Ratio 1064nm/532nm</td></tr>
 	        <tr><td>Depolarization Ratio</td></tr>
 	        <tr>
-	            <td rowspan="5">Lidar L2 Cloud Layer Products
+	            <td rowspan="5">Lidar L2 Cloud Layer<br />
 	                            (333m, 1km, 5km)</td>
 	            <td>Integrated Attenuated Backscatter 532nm</td>
 	        </tr>
