--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ css: home.css
     and Aqua MODIS products.
 </p>
 
-<p style="background: #f5f5f5; padding: 0.5em; margin-top: -1em; float: right; text-align: center">
+<p class="ccbrowse">
 You might also find interesting:<br /><a href="https://browse.ccplot.org">browse.ccplot.org</a> (experimental).
 </p>
 
@@ -51,11 +51,11 @@ You might also find interesting:<br /><a href="https://browse.ccplot.org">browse
     <a href="https://sourceforge.net/projects/ccplot/files/products/MYD021KM.A2007163.0415.005.2009290181256.hdf">MYD021KM.A2007163.0415.005.2009290181256.hdf</a>
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
-<a href="img/orbit-modis_x31+cloudsat.png">
-    <img src="img/orbit-modis_x31+cloudsat-small.png" height="370" />
+<a href="img/orbit-modis_x31+cloudsat.png" style="display: inline-block">
+    <img src="img/orbit-modis_x31+cloudsat-small.png" style="height: 370px" />
 </a>
-<a href="img/orbit-modis_x31+calipso_spstere.png">
-    <img src="img/orbit-modis_x31+calipso_spstere-small.png" height="370" />
+<a href="img/orbit-modis_x31+calipso_spstere.png" style="display: inline-block">
+    <img src="img/orbit-modis_x31+calipso_spstere-small.png" style="height: 370px" />
 </a>
 
 <p class="intro"><a href="features/">And more…</a>
