ccbrowse link on home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ title: ""
 css: home.css
 ---
 
+<div class="ccbrowse">
+    <p>Browse CALIPSO at:</p>
+    <a href="https://browse.ccplot.org">
+        browse.ccplot.org
+        <img src="img/ccbrowse.png" />
+    </a>
+</div>
+
 <p class="abstract">
     ccplot is an open source command-line program for
     plotting profile, layer and earth view data sets from CloudSat, CALIPSO
