ccbrowse: Note about supported browsers.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ css: home.css
         browse.ccplot.org
         <img src="img/ccbrowse.png" />
     </a>
+    <p class="browsers">
+    Supported web browsers:<br />
+    Firefox and Chrome.<br />
+    Safari is not supported.
+    </p>
 </div>
 
 <p class="abstract">
