Fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ css: home.css
     <p>Browse CALIPSO at:</p>
     <a href="https://browse.ccplot.org">
         browse.ccplot.org
-        <img src="img/ccbrowse.png" />
+        <img alt="A screenshot of ccbrowse interface" src="img/ccbrowse.png" />
     </a>
 </div>
 
@@ -28,9 +28,11 @@ css: home.css
     -x 4:16:20..4:21:50 -y 0..30000 calipso532
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
-<a href="img/calipso532.png">
-    <img src="img/calipso532-small.png" width="850" />
-</a>
+<p>
+    <a href="img/calipso532.png">
+        <img alt="A plot of CALIPSO backscatter" src="img/calipso532-small.png" width="850" />
+    </a>
+</p>
 
 <h2>CloudSat profile plots</h2>
 <div class="code">
@@ -38,9 +40,11 @@ css: home.css
     -y -1000..18000 cloudsat-reflec
     <a href="https://sourceforge.net/projects/ccplot/files/products/2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf">2009037050924_14779_CS_2B-GEOPROF_GRANULE_P_R04_E02.hdf</a>
 </div>
-<a href="img/cloudsat-reflec.png">
-    <img src="img/cloudsat-reflec-small.png" width="850" />
-</a>
+<p>
+    <a href="img/cloudsat-reflec.png">
+        <img alt="A plot of CloudSat radar reflectivity" src="img/cloudsat-reflec-small.png" width="850" />
+    </a>
+</p>
 
 <h2>CloudSat and CALIPSO trajectories on top of MODIS swath</h2>
 <p>Several projections and MODIS bands are supported.</p>
@@ -55,11 +59,13 @@ css: home.css
     <a href="https://sourceforge.net/projects/ccplot/files/products/MYD021KM.A2007163.0415.005.2009290181256.hdf">MYD021KM.A2007163.0415.005.2009290181256.hdf</a>
     <a href="https://sourceforge.net/projects/ccplot/files/products/CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf">CAL_LID_L1-ValStage1-V3-01.2007-06-12T03-42-18ZN.hdf</a>
 </div>
-<a href="img/orbit-modis_x31+cloudsat.png" style="display: inline-block">
-    <img src="img/orbit-modis_x31+cloudsat-small.png" style="height: 370px" />
-</a>
-<a href="img/orbit-modis_x31+calipso_spstere.png" style="display: inline-block">
-    <img src="img/orbit-modis_x31+calipso_spstere-small.png" style="height: 370px" />
-</a>
+<p>
+    <a href="img/orbit-modis_x31+cloudsat.png" style="display: inline-block">
+        <img alt="A plot of MODIS swath" src="img/orbit-modis_x31+cloudsat-small.png" style="height: 364px" />
+    </a>
+    <a href="img/orbit-modis_x31+calipso_spstere.png" style="display: inline-block">
+        <img alt="A plot of MODIS swath" src="img/orbit-modis_x31+calipso_spstere-small.png" style="height: 364px" />
+    </a>
+</p>
 
 <p class="intro"><a href="features/">And more…</a>
