Fix broken links

--- a/data/index.html
+++ b/data/index.html
@@ -33,7 +33,7 @@ title: Data sources
     Products can be browsed on the
     <a href="https://www-calipso.larc.nasa.gov/products/lidar/browse_images/production/">CALIPSO
     project website at NASA LARC</a> and
-    <a href="https://www.icare.univ-lille.fr/data-access/browse-images/calipso3/">ICARE</a>.
+    <a href="https://www.icare.univ-lille.fr/asd-content/calipso/">ICARE</a>.
     </li>
     <li><strong>MODIS.</strong> You can use the
     <a href="https://worldview.earthdata.nasa.gov">NASA Worldview</a>
