--- a/download/index.html
+++ b/download/index.html
@@ -1,10 +1,11 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title></title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>Redirect</title>
+<meta charset="utf-8" />
 <meta http-equiv="refresh" content="0;url={{site.url}}/installation/" />
 </head>
+<body></body>
 </html>
