Change ccbrowse description (includes CloudSat)

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@ title: ""
 css: home.css
 ---
 
-<div class="ccbrowse">
-    <p>Browse CALIPSO at:</p>
-    <a href="https://browse.ccplot.org">
-        browse.ccplot.org
-        <img alt="A screenshot of ccbrowse interface" src="img/ccbrowse.png" />
-    </a>
+<div class="preamble">
+    <p class="abstract">
+        ccplot is an open source command-line program for
+        plotting profile, layer and earth view data sets from CloudSat, CALIPSO
+        and Aqua MODIS products.
+    </p>
+    <div class="ccbrowse">
+        <p>Browse CALIPSO and CloudSat:</p>
+        <a href="https://browse.ccplot.org">
+            browse.ccplot.org
+            <img alt="A screenshot of ccbrowse interface" src="img/ccbrowse.png" />
+        </a>
+    </div>
 </div>
-
-<p class="abstract">
-    ccplot is an open source command-line program for
-    plotting profile, layer and earth view data sets from CloudSat, CALIPSO
-    and Aqua MODIS products.
-</p>
 
 <h1>Features</h1>
 <h2>CALIPSO profile and layer plots</h2>
