--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.2 (2023-06-20)</h2>
+<ul>
+    <li>Support for Anaconda Python 3.10 on Windows.</li>
+</ul>
 <h2>New in 2.1.1 (2022-01-23)</h2>
 <ul>
     <li>Fixed building of Python wheel on Windows (missing DLLs).</li>
