--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.3 (2023-08-18)</h2>
+<ul>
+    <li>Support for installing with pipx.</li>
+</ul>
 <h2>New in 2.1.2 (2023-06-20)</h2>
 <ul>
     <li>Support for Anaconda Python 3.10 on Windows.</li>
