--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.4 (2023-09-08)</h2>
+<ul>
+    <li>Support for installation on Windows with Python 3.11.</li>
+</ul>
 <h2>New in 2.1.3 (2023-08-18)</h2>
 <ul>
     <li>Support for installing with pipx.</li>
