--- a/installation/releasenotes/index.html
+++ b/installation/releasenotes/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Release notes
 ---
 <h1>Release notes</h1>
+<h2>New in 2.1.6 (2026-02-12)</h2>
+<ul>
+    <li>Fixed installation issues due to new versions of dependencies.</li>
+</ul>
 <h2>New in 2.1.5 (2025-03-26)</h2>
 <ul>
     <li>Fixed installation bug due to NumPy 2.</li>
